syntax = "proto3";

option csharp_namespace = "CategoryService";

service GrpcCategory {
    rpc GetAllCategories (GetAllRequest) returns (CategoryResponse);
}

message GetAllRequest {}

message GrpcCategoryModel {
    int32 categoryId = 1;
    string name = 2;
    string publisher = 3;
}

message CategoryResponse {
    repeated GrpcCategoryModel category = 1;
}